--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,85 +1,67 @@
 ---
-import type { CollectionEntry } from 'astro:content';
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import FormattedDate from '../components/FormattedDate.astro';
+import Metadata from '@components/Metadata.astro';
+import Header from '@components/Header.astro';
+import Footer from '@components/Footer.astro';
 
-type Props = CollectionEntry<'blog'>['data'];
+import AdHandler from '@components/AdHandler.astro';
+import "@styles/blog.scss";
 
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
+const { post } = Astro.props;
+const { data: meta } = post;
+const { Content, remarkPluginFrontmatter } = await post.render();
 ---
 
+<!doctype html>
 <html lang="en">
 	<head>
-		<BaseHead title={title} description={description} />
-		<style>
-			main {
-				width: calc(100% - 2em);
-				max-width: 100%;
-				margin: 0;
-			}
-			.hero-image {
-				width: 100%;
-			}
-			.hero-image img {
-				display: block;
-				margin: 0 auto;
-				border-radius: 12px;
-				box-shadow: var(--box-shadow);
-			}
-			.prose {
-				width: 720px;
-				max-width: calc(100% - 2em);
-				margin: auto;
-				padding: 1em;
-				color: rgb(var(--gray-dark));
-			}
-			.title {
-				margin-bottom: 1em;
-				padding: 1em 0;
-				text-align: center;
-				line-height: 1;
-			}
-			.title h1 {
-				margin: 0 0 0.5em 0;
-			}
-			.date {
-				margin-bottom: 0.5em;
-				color: rgb(var(--gray));
-			}
-			.last-updated-on {
-				font-style: italic;
-			}
-		</style>
+		<Metadata title={meta.title + " - nick's brew"} description={meta.desc || "A blog post at nick's brew."} />
 	</head>
-
 	<body>
 		<Header />
 		<main>
-			<article>
-				<div class="hero-image">
-					{heroImage && <img width={1020} height={510} src={heroImage} alt="" />}
-				</div>
-				<div class="prose">
-					<div class="title">
-						<div class="date">
-							<FormattedDate date={pubDate} />
-							{
-								updatedDate && (
-									<div class="last-updated-on">
-										Last updated on <FormattedDate date={updatedDate} />
-									</div>
-								)
-							}
-						</div>
-						<h1>{title}</h1>
-						<hr />
-					</div>
-					<slot />
-				</div>
-			</article>
+            <div class="date">
+                <p>{meta.date.toLocaleDateString("en-US", { year: 'numeric', month: 'short', day: 'numeric' })}</p>
+                <p>&#8212;</p>
+                <p>{remarkPluginFrontmatter.readTime}</p>
+            </div>
+			<h1>{meta.title}</h1>
+            <div class="tags">
+                {meta.tags?.map(tag => <span>{tag}</span>)}
+            </div>
+            <hr>
+            <article>
+                <Content />
+            </article>
 		</main>
 		<Footer />
+        <AdHandler />
 	</body>
 </html>
+
+<style lang="scss">
+    article {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .date {
+        text-align: center;
+        > * {
+            margin-bottom: 0;
+            display: inline-block;
+        }
+    }
+
+    .tags {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0.5rem;
+        margin: 1rem 0;
+    }
+
+    .tags span {
+        background-color: var(--alt-background);
+        padding: 0.25rem 0.5rem;
+        border-radius: 0.25rem;
+    }
+</style>
