--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,50 +1,82 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
+import Metadata from '../components/Metadata.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import { Icon } from 'astro-icon/components';
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+		<Metadata title="nick's brew" description="Nicholas Hardenburgh's personal website" />
 	</head>
 	<body>
 		<Header />
 		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/content/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
+			<h1>
+                <span class="gradient">Nicholas Hardenburgh</span>
+            </h1>
+            <h2>got root? check out my stuff</h2>
+            <div class="socials">
+                <a href="https://www.linkedin.com/in/nicholas-hardenburgh">
+                    <Icon name="linkedin" size="2rem" />
+                </a>
+                <a href="mailto:nick@reversed.coffee">
+                    <Icon name="mail" size="2rem" />
+                </a>
+                <a href="/blog">
+                    <Icon name="seeding" size="2rem" />
+                </a>
+                <a href="https://github.com/reversed-coffee">
+                    <Icon name="github" size="2rem" />
+                </a>
+            </div>
 		</main>
-		<Footer />
+		<Footer fixed noIcons />
 	</body>
 </html>
+
+<style lang="scss">
+    html {
+        // If for whatever reason it shows a scrollbar, which you shouldn't see anyways
+        overflow: hidden;
+    }
+
+    main {
+        display: flex;
+        height: calc(100vh - 15rem); // idk i give up lets just make it work...
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+        flex-direction: column;
+        overflow-wrap: break-word;
+    }
+
+    h1, h2 {
+        font-family: 'Caveat', cursive;
+    }
+
+    h1 {
+        font-weight: bold;
+        font-size: 4rem;
+    }
+
+    h2 {
+        font-size: 2rem;
+        color: var(--accent);
+    }
+
+    .socials {
+        display: flex;
+        gap: 1rem;
+        justify-content: center;
+        margin: 0.5rem 0;
+
+        a {
+            color: var(--alt-foreground);
+            &:hover {
+                color: var(--foreground);
+            }
+        }
+    }
+</style>
