--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -1,6 +1,11 @@
 article {
     line-height: 1.7;
 
+    p:has(> img) {
+        display: flex;
+        justify-content: center;
+    }
+
     img {
         max-width: 100%;
         margin: 0.5rem 0;
