--- a/src/components/Metadata.astro
+++ b/src/components/Metadata.astro
@@ -61,3 +61,6 @@ const {
 
 <!-- Discord -->
 <meta name="theme-color" content={color} />
+
+<!-- Alternative onion link -->
+<meta http-equiv="onion-location" content="http://brewz5li5caoioneubizdvuatc25solgnytis27uecxvz45tnnayocqd.onion" />
