--- a/src/components/Metadata.astro
+++ b/src/components/Metadata.astro
@@ -1,31 +1,22 @@
 ---
-import '../styles/global.scss';
+import { ONION_LINK } from '@consts';
 
 interface Props {
 	title: string;
-	description: string;
+	desc: string;
 	image?: string;
     color?: string;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+
 const {
     title,
-    description,
+    desc,
     image = '/blog-placeholder-1.jpg',
     color = '#FFFFFF'
 } = Astro.props;
 ---
-
-<!--
-    Theme Loading.
-    Do not let Astro handle this -- we need to block rendering until the theme is loaded!
-    This is one of the downsides of CSR and not SSR.
--->
-<script is:inline>
-    const theme = localStorage.getItem('theme');
-    if (theme) document.documentElement.setAttribute('data-theme', theme);
-</script>
 
 <!-- Global Metadata -->
 <meta charset="utf-8" />
@@ -44,24 +35,24 @@ const {
 <!-- Primary Meta Tags -->
 <title>{title}</title>
 <meta name="title" content={title} />
-<meta name="description" content={description} />
+<meta name="description" content={desc} />
 
 <!-- Open Graph -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
-<meta property="og:description" content={description} />
+<meta property="og:description" content={desc} />
 <meta property="og:image" content={new URL(image, Astro.url)} />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
-<meta property="twitter:description" content={description} />
+<meta property="twitter:description" content={desc} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
 <!-- Discord -->
 <meta name="theme-color" content={color} />
 
 <!-- Alternative onion link -->
-<meta http-equiv="onion-location" content="http://brewz5li5caoioneubizdvuatc25solgnytis27uecxvz45tnnayocqd.onion" />
+<meta http-equiv="onion-location" content={ONION_LINK} />
