--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -18,7 +18,7 @@ const latestPosts = posts.slice(0, 5);
 <!doctype html>
 <html lang="en">
 	<head>
-		<Metadata title="Blog - nick's brew" description="A collection of palatable blog posts related to tech and cybersecurity" />
+		<Metadata title="Blog - nick's brew" desc="A collection of palatable blog posts related to tech and cybersecurity" />
 	</head>
 	<body>
 		<Header />
