--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import { Icon } from 'astro-icon/components';
 <!doctype html>
 <html lang="en">
 	<head>
-		<Metadata title="nick's brew" description="Nicholas Hardenburgh's personal website" />
+		<Metadata title="nick's brew" desc="Nicholas Hardenburgh's personal website" />
 	</head>
 	<body>
 		<Header />
