--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -44,7 +44,7 @@ projectsSorted.sort(([ yearA ], [ yearB ]) => yearB - yearA);
 <!doctype html>
 <html lang="en">
 	<head>
-		<Metadata title="Project Portfolio - nick's brew" description="Some of the projects I've worked on" />
+		<Metadata title="Project Portfolio - nick's brew" desc="Some of the projects I've worked on" />
 	</head>
 	<body>
 		<Header />
