--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,4 +1,6 @@
 ---
+import Layout from '@layouts/Global.astro';
+
 import Metadata from '@components/Metadata.astro';
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
@@ -9,34 +11,29 @@ import "@styles/blog.scss";
 const { post } = Astro.props;
 const { data: meta } = post;
 const { Content, remarkPluginFrontmatter } = await post.render();
+
+const structuredData = {
+    "@context": "https://schema.org",
+    "@type": "BlogPosting",
+}
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<Metadata title={meta.title + " - nick's brew"} description={meta.desc || "A blog post at nick's brew."} />
-	</head>
-	<body>
-		<Header />
-		<main>
-            <div class="date">
-                <p>{meta.date.toLocaleDateString("en-US", { year: 'numeric', month: 'short', day: 'numeric' })}</p>
-                <p>&#8212;</p>
-                <p>{remarkPluginFrontmatter.readTime}</p>
-            </div>
-			<h1>{meta.title}</h1>
-            <div class="tags">
-                {meta.tags?.map(tag => <span>{tag}</span>)}
-            </div>
-            <hr>
-            <article>
-                <Content />
-            </article>
-		</main>
-		<Footer />
-        <AdHandler />
-	</body>
-</html>
+<Layout title={meta.title} desc={meta.desc}>
+    <div class="date">
+        <p>{meta.date.toLocaleDateString("en-US", { year: 'numeric', month: 'short', day: 'numeric' })}</p>
+        <p>&#8212;</p>
+        <p>{remarkPluginFrontmatter.readTime}</p>
+    </div>
+    <h1>{meta.title}</h1>
+    <div class="tags">
+        {meta.tags?.map(tag => <span>{tag}</span>)}
+    </div>
+    <hr>
+    <article>
+        <Content />
+    </article>
+    <AdHandler slot="after-render" />
+</Layout>
 
 <style lang="scss">
     article {
