--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,7 +1,6 @@
 ---
-import Metadata from '../components/Metadata.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import Layout from '@layouts/Global.astro';
+
 import { getCollection } from 'astro:content';
 
 const projects = await getCollection('projects');
@@ -41,43 +40,33 @@ for (const [ year, projs ] of Object.entries(projectsByYear)) {
 projectsSorted.sort(([ yearA ], [ yearB ]) => yearB - yearA);
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<Metadata title="Project Portfolio - nick's brew" desc="Some of the projects I've worked on" />
-	</head>
-	<body>
-		<Header />
-		<main>
-            <section class="center">
-                <h1>My Portfolio</h1>
-                <span>A comprehensive list of projects I've worked on over the years.</span>
-            </section>
-            {(projectsSorted.map(([year, projects]) =>
-                <article class="project-list">
-                    <div>
-                        <h2>{year}</h2>
-                        <hr>
+<Layout title="Projects" desc="A comprehensive list of projects I've worked on over the years.">
+    <section class="flex-center">
+        <h1>My Portfolio</h1>
+        <span>A comprehensive list of projects I've worked on over the years.</span>
+    </section>
+    {(projectsSorted.map(([year, projects]) =>
+        <article class="project-list">
+            <div>
+                <h2>{year}</h2>
+                <hr>
+            </div>
+            {projects.map(project => {
+                const { Content } = (project as any).rendered;
+                return (
+                    <div class="project">
+                        <h3>{project.data.title}</h3>
+                        <p>{project.data.description}</p>
+                        <div class="tags">
+                            {project.data.tags.map(tag => <span>{tag}</span>)}
+                        </div>
+                        <Content />
                     </div>
-                    {projects.map(project => {
-                        const { Content } = (project as any).rendered;
-                        return (
-                            <div class="project">
-                                <h3>{project.data.title}</h3>
-                                <p>{project.data.description}</p>
-                                <div class="tags">
-                                    {project.data.tags.map(tag => <span>{tag}</span>)}
-                                </div>
-                                <Content />
-                            </div>
-                        )
-                    })}
-                </article>
-            ))}
-		</main>
-		<Footer />
-	</body>
-</html>
+                )
+            })}
+        </article>
+    ))}
+</Layout>
 
 <style lang="scss">
     .project-list {
