--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,5 @@
 ---
 interface Props {
-    fixed?: boolean;
     noIcons?: boolean;
 }
 
@@ -8,12 +7,11 @@ import { Icon } from 'astro-icon/components';
 
 const today = new Date();
 const {
-    fixed = false,
     noIcons = false
 } = Astro.props;
 ---
 
-<footer class={fixed ? 'fixed' : ''}>
+<footer>
 	<p>&copy; {today.getFullYear()} Nicholas Hardenburgh. All rights reserved.</p>
     <div class="quick-links">
         <a href="https://github.com/reversed-coffee">
@@ -30,17 +28,14 @@ const {
 
 <style lang="scss" define:vars={{ iconDisplay: noIcons ? 'none' : 'flex' }}>
     footer {
+        margin-top: auto;
         text-align: center;
         overflow-wrap: break-word;
-        margin: 1rem;
 
-        &.fixed {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background: var(--background);
-            color: var(--foreground);
+        &::before{
+            content: '.';
+            opacity: 0;
+            min-height: 1rem;
         }
     }
 
