--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,14 +1,10 @@
 ---
-import { getCollection } from "astro:content";
+import { getPosts, slugify } from "@utils";
+
 import BlogPost from "@layouts/BlogPost.astro";
 
 export async function getStaticPaths() {
-    const posts = (await getCollection("posts")).filter(post => post.data.title !== undefined);
-
-    function slugify(title: string): string {
-        return title.toLowerCase().match(/[a-z0-9']+/g)!.join("-").replace("'", "");
-    }
-
+    const posts = await getPosts();
     return posts.map(post => ({
         params: { slug: post.data.slug || slugify(post.data.title) },
         props: { post }
