--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,3 @@
-@import "./fonts.css";
 @import "./colors.css";
 
 html, body {
@@ -7,16 +6,21 @@ html, body {
 }
 
 body {
-    display: flex;
-    flex-direction: column;
+    $marginY: 1rem;
+
     background: var(--background);
     color: var(--foreground);
 
     max-width: 700px;
-    margin: 1rem auto;
+
+    margin: $marginY auto;
+    min-height: calc(100vh - $marginY * 2);
 
     font-family: 'Lato', sans-serif;
     font-size: 1.125rem;
+
+    display: flex;
+    flex-direction: column;
 }
 
 @media screen and (max-width: 1000px) {
@@ -102,7 +106,19 @@ hr {
     margin: 1rem 0;
 }
 
-span.gradient {
+.t-cursive {
+    font-family: 'Caveat', cursive;
+}
+
+.t-mono {
+    font-family: 'Fira Code', monospace;
+}
+
+.t-serif {
+    font-family: 'Raleway', sans-serif;
+}
+
+.t-gradient {
     background-image: linear-gradient(45deg, var(--alt-accent), var(--accent));
     background-position: 0%;
     background-size: 400%;
@@ -114,9 +130,15 @@ span.gradient {
     display: none;
 }
 
-.center {
+.flex-grow {
+    display: flex;
+    flex-grow: 1;
+}
+
+.flex-center {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     text-align: center;
 }
